remove referee boldfacing

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -8,7 +8,7 @@
 \newcommand{\bam}[1]{\textcolor{green!65!black}{\textbf{[BAM: #1]}}}
 \newcommand{\rlp}[1]{\textcolor{red!65!black}{\textbf{[RLP: #1]}}}
 \newcommand{\ag}[1]{\textcolor{red!65!black}{\textbf{[AG: #1]}}}
-\newcommand{\referee}[1]{\textbf{#1}}
+\newcommand{\referee}[1]{#1}
 \begin{document}
 \input{authors}
 
