correct several annoying and severe typos

--- a/extracted.bib
+++ b/extracted.bib
@@ -965,55 +965,35 @@
   doi =           {10.1016/j.molstruc.2003.11.010},
 }
 
-@inproceedings{Muller2005a,
+@article{Muller2005b,
   author =        {{M{\"u}ller}, H.~S.~P. and {Schl{\"o}der}, F. and
-                   {Stutzki}, J. and {Schlemmer}, S. and {Giesen}, T. and
-                   {Schilke}, P.},
-  booktitle =     {IAU Symposium},
-  pages =         {62P},
-  series =        {IAU Symposium},
+                   {Stutzki}, J. and {Winnewisser}, G.},
+  journal =       {Journal of Molecular Structure},
+  month =         may,
+  pages =         {215-227},
   title =         {{The Cologne Database for Molecular Spectroscopy,
-                   CDMS: A Tool for Astrochemists and Astrophysicists}},
-  volume =        {235},
+                   CDMS: a useful tool for astronomers and
+                   spectroscopists}},
+  volume =        {742},
   year =          {2005},
-  abstract =      {The computer-accessible Cologne Database for
-                   Molecular Spectroscopy (CDMS) contains a catalog of
-                   rotational transition frequencies of molecular
-                   species that have been or may be identified in the
-                   interstellar medium, circumstellar envelopes, or in
-                   planetary atmospheres (M{\"u}ller et al. 2001,
-                   M{\"u}ller et al. 2005). Particular emphasis has been
-                   put on supplying data in the submillimeter and
-                   terahertz frequency ranges as well as data with
-                   increased accuracy. The entries are created by
-                   fitting critically evaluated experimental data to
-                   established Hamiltonian models to ensure entries that
-                   are as reliable as possible. Separate entries are
-                   provided for minor isotopic species or for excited
-                   vibrational states (except for diatomics) as far as
-                   appropriate. The catalog is updated continuously.
-                   More than 300 entries are available as of April 2005.
-                   Examples of recently included light hydride species,
-                   deuterated compounds, vibrationally excited species,
-                   and complex molecules will be listed, and the need
-                   for additional data shall be discussed. Several
-                   output options have been implemented, and examples
-                   will be demonstrated. Future plans will be discussed,
-                   e. g. using resources other than the CDMS catalog in
-                   the search and conversion routines and creating more
-                   entries involving rovibrational transitions.
-                   Transition frequencies are available not only for
-                   species detected in space but also for compounds that
-                   may be detected in the future. Therefore, the catalog
-                   is an ideal tool for analyzing line surveys and for
-                   searching for new molecules in space. In addition,
-                   the CDMS contains a web page that lists molecules
-                   detected in astronomical sources, a help page for
-                   fitting rotationally resolved spectra, as well as
-                   information on recent changes in the CDMS. The CDMS
-                   is available online free of charge via the alias
-                   http://www.cdms.de/ and via a link on the KOSMA web
-                   page http://www.ph1.uni-koeln.de/.},
+  abstract =      {The general features of the internet
+                   browser-accessible Cologne Database for Molecular
+                   Spectroscopy (CDMS) and recent developments in the
+                   CDMS are described in the present article. The
+                   database consists of several parts; among them is a
+                   catalog of transition frequencies from the
+                   radio-frequency to the far-infrared region covering
+                   atomic and molecular species that (may) occur in the
+                   interstellar or circumstellar medium or in planetary
+                   atmospheres. As of December 2004, 280 species are
+                   present in this catalog. The transition frequencies
+                   were predicted from fits of experimental data to
+                   established Hamiltonian models. We present some
+                   examples to demonstrate how the combination of
+                   various input data or a compact representation of the
+                   Hamiltonian can be beneficial for the prediction of
+                   the line frequencies.},
+  doi =           {10.1016/j.molstruc.2005.01.027},
 }
 
 @book{Lovas2005b,
@@ -1524,16 +1504,17 @@
   doi =           {10.1051/0004-6361:20066820},
 }
 
-@inproceedings{Dickinson1975a,
+@article{Dickinson1975b,
   author =        {{Dickinson}, A.~S. and {Richards}, D.},
-  booktitle =     {Physics of Electronic and Atomic Collisions: ICPEAC
-                   IX},
-  editor =        {{Risley}, J.~S. and {Geballe}, R.},
-  pages =         {291},
-  title =         {{Rotational Excitation of Diatomic Molecules by
-                   Electrons}},
+  journal =       {Journal of Physics B Atomic Molecular Physics},
+  month =         dec,
+  pages =         {2846-2857},
+  title =         {{The rotational excitation of polar molecules by
+                   electrons}},
+  volume =        {8},
   year =          {1975},
   abstract =      {Not Available},
+  doi =           {10.1088/0022-3700/8/17/017},
 }
 
 @article{Bergin2007a,
@@ -1657,7 +1638,7 @@
   doi =           {10.1016/0022-2852(83)90288-6},
 }
 
-@article{Silver1986,
+@article{Silver1986a,
   author =        {{Silver}, J.~A. and {Worsnop}, D.~R. and
                    {Freedman}, A. and {Kolb}, C.~E.},
   journal =       {\jcp},
@@ -1667,6 +1648,21 @@
                    phase sodium chloride at room temperature}},
   volume =        {84},
   year =          {1986},
+  abstract =      {Absolute photodissociation cross sections for gas
+                   phase NaCl are measured over the wavelength range of
+                   189.7-359.8 nm at 300 K. Two well-resolved peaks are
+                   observed at 235 and 260 nm. The cross section also
+                   rises below 210 nm. These results are in good
+                   qualitative agreement with previous high temperature
+                   measurements and with cross sections computed from
+                   theoretically calculated potential surfaces. However,
+                   there are two significant differences, the spectral
+                   width and the absolute magnitude of the cross
+                   sections. The importance of these measurements in
+                   understanding the photodissociative processes of
+                   ionic compounds and the implications for the role of
+                   NaCl in the stratospheric chemistry of chlorine
+                   compounds are discussed.},
   doi =           {10.1063/1.450060},
 }
 
@@ -1948,34 +1944,6 @@
                    multi-stellar disintegration. However, source `n'
                    appears to have a small proper motion and is unlikely
                    to have been involved in the event.},
-}
-
-@article{Silver1986a,
-  author =        {{Silver}, J.~A. and {Worsnop}, D.~R. and
-                   {Freedman}, A. and {Kolb}, C.~E.},
-  journal =       {\jcp},
-  month =         apr,
-  pages =         {4378-4384},
-  title =         {{Absolute photodissociation cross sections of gas
-                   phase sodium chloride at room temperature}},
-  volume =        {84},
-  year =          {1986},
-  abstract =      {Absolute photodissociation cross sections for gas
-                   phase NaCl are measured over the wavelength range of
-                   189.7-359.8 nm at 300 K. Two well-resolved peaks are
-                   observed at 235 and 260 nm. The cross section also
-                   rises below 210 nm. These results are in good
-                   qualitative agreement with previous high temperature
-                   measurements and with cross sections computed from
-                   theoretically calculated potential surfaces. However,
-                   there are two significant differences, the spectral
-                   width and the absolute magnitude of the cross
-                   sections. The importance of these measurements in
-                   understanding the photodissociative processes of
-                   ionic compounds and the implications for the role of
-                   NaCl in the stratospheric chemistry of chlorine
-                   compounds are discussed.},
-  doi =           {10.1063/1.450060},
 }
 
 @article{Cherchneff2012a,
