--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -195,14 +195,14 @@ of ALMA project 2016.1.00165.S.  We use the robust 0.5 weighted spectral cubes
 from all three bands (B3 3.0 mm, B6 1.3 mm, B7 0.87 mm) for our spectroscopic analysis.
 
 Appendix D of that paper describes the spectral extraction method, which we
-summarize here.  We used the U232.511 line (which we now identify as NaCl v=1
-J=18-17) to find the velocity centroid for each (spatial) pixel across the
+summarize here.  We used the U232.511 line (which we now identify as NaCl $v=1$
+$J=18-17$) to find the velocity centroid for each (spatial) pixel across the
 \sourcei disk.  We shifted the spectrum along each such pixel to 0 \kms, then
 averaged the shifted spectra over the region with significant emission in the
 NaCl line.  The averaging area is approximately the extent of the continuum
 disk, 0.03 square arcseconds, or about 4, 20, and 40  beam areas, resulting in
 an improvement in the signal-to-noise of about $2\times$, $4\times$, and
-$6\times$ respectively in Band 3, 6, and 7.  This stacked spectrum, shown in
+$6\times$, respectively, in Band 3, 6, and 7.  This stacked spectrum, shown in
 Figures \ref{fig:spectrab3}-\ref{fig:spectrab7}, traces material just above and
 below the optically thick continuum disk (Figure \ref{fig:spatial}).  Because
 this procedure removes the rotational velocity field of the disk, lines in the
@@ -220,7 +220,7 @@ emission.
 % spectra, though there are several in B3 we have not identified).
 
 In the appendix of \citet{Ginsburg2018b}, we listed over 20 unidentified 
-lines in the B6 ALMA spectra, and commented that ``there is no
+lines in the B6 ALMA spectra and commented that ``there is no
 consistent pattern to the detected lines and no individual species can explain
 more than a few of the observed lines.''  This statement was incorrect, as
 there are obvious carriers for the majority of the unidentified lines that we
@@ -230,11 +230,11 @@ to brightness temperatures 5-20 K.
 
 In Figures \ref{fig:spectrab3}-\ref{fig:spectrab7}, we have labeled all of the
 detections and marginal detections of salt lines, as well as the most prominent
-outflow (e.g., SiO and H$_2$O) lines.  Only 2-3 emission lines are now
+outflow (e.g., SiO and H$_2$O) lines.  Only two to three emission lines are now
 unidentified in the B6 and B7 spectra, though there are over a dozen in B3 that
 we have not identified. 
 
-We also tentatively identify broad lines at 229.7 GHz and 344.4 GHz as AlO.  If
+We also tentatively identify broad lines at 229.7 and 344.4 GHz as AlO.  If
 the identification is correct, these lines are broad because of the rich
 hyperfine spectrum of AlO.
 
@@ -271,23 +271,23 @@ hyperfine spectrum of AlO.
 
 
 In Tables \ref{tab:Na_detections_B3}-\ref{tab:K_detections_B7}, we list all
-of the salt lines in vibrational energy levels up to v=8 that lie within our
+of the salt lines in vibrational energy levels up to $v=8$ that lie within our
 observed bands and whether or not they were detected.  We employ the following
 flag scheme: `D' for detection, `N' for nondetection, `Q' for questionable
 (e.g., low signal-to-noise, but possibly detected, or in regions where the
 noise is not Gaussian and may be affected by other lines).  We additionally
 include a flag `C' for `confused', which we add to the flag string if the line
 is blended with another brighter line of a different species.  There are robust
-detections of about 60 lines, up to the v=6 vibrational level.
+detections of about 60 lines, up to the $v=6$ vibrational level.
 
 The majority of the NaCl and KCl lines that we detected are in excited
 vibrational states.  Although transitions in higher vibrational states were
 measured, and some reported, in \citet{Caris2004a}, they did not provide the
 complete catalogs needed for this analysis, nor to our knowledge are these
-catalogues available in any of the standard online databases \citep[i.e., CDMS,
-SLAIM, JPL;][]{Muller2005a,Lovas2005b,Pickett1998a}.  We obtained the KCl
-frequencies for these lines from the catalogs of \citet{Barton2014a}, which was
-designed primarily for use in exoplanet atmospheres and includes over 10$^5$
+catalogs available in any of the standard online databases \citep[i.e., CDMS,
+SLAIM, JPL;][]{Muller2005b,Lovas2005b,Pickett1998a}.  We obtained the KCl
+frequencies for these lines from the catalogs of \citet{Barton2014a}, which were
+designed primarily for use in exoplanet atmospheres and include over 10$^5$
 transitions for each molecular species and isotopologue with levels up to
 $E_U\sim5\ee{4}$ K, and the NaCl frequencies from \citet{Cabezas2016a}, who
 provided more accurate potential energy and dipole moment functions. The
@@ -324,8 +324,8 @@ for this error by performing a bilinear fit in frequency as a function of $v_u$
 and $J_u$.  In the transitions available in both catalogs the resulting
 frequency differences are generally $<0.1$ \kms, which is more than sufficient
 for a reliable match to our spectra.  We then applied these
-fitted models to the higher-$v$ states tabulated by Barton to get corrected
-rest frequencies for KCl, while for NaCl we used the \citet{Cabezas2016a}
+fitted models to the higher-$v$ states tabulated by Barton to obtain corrected
+rest frequencies for KCl, while for NaCl, we used the \citet{Cabezas2016a}
 values.  We note that the values printed in \citet{Barton2014a} differ from
 those in the digital catalogs hosted on \url{exomol.com}, so we suspect the
 error was merely a transcription error of some sort.
@@ -335,7 +335,7 @@ error was merely a transcription error of some sort.
 % \textbf{\color{red} At the moment, all of the line frequencies are shifted
 % to higher frequencies by 17 \kms (KCl) and 3 \kms (NaCl) because of a discrepancy
 % between the \citep{Barton2014a} catalog line frequencies and those of CDMS,
-% JPL, and SLAIM.  The latter three, catalogued in Splatalogue, agree, and they
+% JPL, and SLAIM.  The latter three, cataloged in Splatalogue, agree, and they
 % agree better with my measurements.}
 
 %\input{lines_in_band3.tex}
@@ -356,7 +356,7 @@ We have fit Gaussian line profiles to each of the transitions we flagged as
 The fits are reported in Tables
 \ref{tab:NaCl_salt_lines}-\ref{tab:41K37Cl_salt_lines}.  
 %Some of these measurements 
-A few of the integrated intensities (e.g., for the KCl v=5 45-44 line) are discrepantly
+A few of the integrated intensities (e.g., for the KCl $v=5$ $J=45-44$ line) are discrepantly
 high \referee{compared to transitions at similar $v$ and $J$ states},
 suggesting that they are blends with other species as denoted in Tables
 \ref{tab:Na_detections_B3}-\ref{tab:K_detections_B7}.
@@ -600,13 +600,13 @@ calculations (\url{https://github.com/keflavich/pyradex/}).}
 The NaCl transitions we observe have  Einstein A values in the range
 $A\sim10^{-3}-10^{-2}$ s$^{-1}$, while the vibrationally excited states have
 infrared transitions with rates $A\sim1$ s$^{-1}$
-\cite{Barton2014a,Cabezas2016a}.  The collision rates into the $v=0$ states are
+\citep{Barton2014a,Cabezas2016a}.  The collision rates into the $v=0$ states are
 $C\sim10^{-11}$ cm$^3$ s$^{-1}$ (insensitive to temperature), while collision
 rates into $v>0$ states from $v=0$ states are lower, $C\sim10^{-13}-10^{-12}$
 cm$^3$ s$^{-1}$ at $T=1000$ K, but only $C < 10^{-15}$  cm$^3$ s$^{-1}$ at
-$T=100$ K \cite{Quintana-Lacaci2016a}.  Thus, extremely high gas temperatures
+$T=100$ K \citep{Quintana-Lacaci2016a}.  Thus, extremely high gas temperatures
 and densities would be required to collisionally excite a significant
-population of the molecules into vibrational states; collisional excitation
+population of the molecules into vibrational states. Collisional excitation
 alone also cannot explain different vibrational states being observed at a
 similar brightness level.
 
@@ -617,14 +617,14 @@ similar brightness level.
 \par{\textbf{(2) Collisional excitation by electrons.}} 
 Because NaCl and KCl are extremely polar molecules, with dipole moments of 9.1
 and 10.3 Debye, respectively \citep{Barton2014a}, collisions with electrons
-could also be important.  Using the approximations from \citet{Dickinson1975a},
+could also be important.  Using the approximations from \citet{Dickinson1975b},
 we find that collision rates between both NaCl and KCl and electrons in the
 J=5-50 v=0 states are $C\approx10^{-5}$ cm$^{3}$ \pers.  Thus, electrons are
-$10^5$ times as efficient at exciting these molecules than \hh. In typical
+$10^5$ times more efficient at exciting these molecules than \hh. In typical
 low-mass disks, ionization fractions $X_e \geq 10^{-4}$ occur in the upper
 layers of the disk, where some UV radiation is able to ionize H and C
 \citep{Bergin2007a}.  Collisions with electrons would dominate the excitation
-of the salt lines in such regions.  However, deeper into the disks only X-rays
+of the salt lines in such regions.  However, deeper into the disks, only X-rays
 and cosmic rays can penetrate, resulting in fractional ionizations $X_e <
 10^{-6}$, too small for electron collisions to be relevant. 
 
@@ -731,7 +731,7 @@ some selection effect in the electronic de-excitation disfavoring higher vibrati
 states, it is difficult to explain this cutoff.  
 Second, the lowest excited electronic energy levels for both NaCl and KCl are about
 5 eV above the ground state, very close to the photodissociation threshold for these
-molecules \citep{Zeiri1983, Silver1986}, which
+molecules \citep{Zeiri1983, Silver1986a}, which
 may therefore be dissociated rather than excited by UV photons.
 Third, there may not be any UV radiation in the outer disk where these lines
 are detected.  
@@ -796,7 +796,7 @@ v=0 45-44}) = 9.7\pm1.8$ K).
 % the high observed vibrational temperatures $T_{vib} \sim 1000$ K, 
 If the rotational excitation temperature $T_{ex}$ were comparable
 with the observed vibrational excitation temperatures $T_{vib} \sim 1000$ K, 
-the 45-44 transition would be 9 times as bright as the 13-12 transition.
+the $J=45-44$ transition would be nine times as bright as the $J=13-12$ transition.
 % $T_{B}(\textrm{KCl
 % v=0 45-44}) \approx 9 \times T_{B}(\textrm{KCl v=0 13-12})$.
 If we assume a dust opacity index $\beta=2$,
@@ -927,7 +927,7 @@ molecular.
 \textbf{(2) Gas-phase formation:}
 Gas-phase formation of NaCl and KCl is possible from ionized Na and K.
 Potassium and sodium have similar first ionization potentials at 4.34 and 5.14
-eV, respectively.  These atoms would be nearly fully ionized between 1500-2000
+eV, respectively.  These atoms would be nearly fully ionized between 1500 and 2000
 K at a density of $10^6$ \percc (aluminum has a higher first ionization
 potential of 5.99 eV, and so is ionized at a few hundred K higher temperatures
 than sodium).  These ions react with HCl to form NaCl and KCl.  However, at
@@ -1067,10 +1067,10 @@ destroyed nearly immediately after being raised from the surface of the disk.
 This morphology hints that immediate dust destruction is an integral part of
 the outflow driving process.
 
-Given the rarity of these molecules, if they can be detected elsewhere,
-they will serve as a powerful and unique probe of local conditions.
-They may be the best available molecular tool to find disks around high-mass
-protostars and measure their kinematics.  
+Given the rarity of these molecules, if they can be detected elsewhere, they
+will serve as a powerful and unique probe of local conditions.  They may be the
+best available molecular tool for finding disks around high-mass protostars and
+measuring their kinematics.  
 
 %These lines trace a rare physical phenomenon.  They are therefore an excellent
 %tracer
@@ -1114,7 +1114,7 @@ from the
 \texttt{numpy} \citep{Numpy2006a},
 \texttt{matplotlib} \citep{Matplotlib},
 \texttt{astroquery}
-\citep[][and~\url{astroquery.readthedocs.io}]{Ginsburg2018Astroquery}
+\citep[][and~\url{astroquery.readthedocs.io}]{Ginsburg2019a}
 and \texttt{CASA} \citep{McMullin2007a}.
 A script to produce the collision rate table file using the fortran code
 provided by \citet{Quintana-Lacaci2016a} is available at
